# verdict-bench

./: .gitignore  Dockerfile  Makefile  README.md  bench.sh  requirements.txt
armor/: Makefile
ceres/: Makefile  README.md  build-ceres.sh
chromium/: .dockerignore  Dockerfile  Makefile  README.md  cert_bench.diff
firefox/: .gitignore  Dockerfile  Makefile  README.md  bootstrap.py  cert_bench.diff  cert_bench.js  cert_bench.sh
hammurabi/: Cargo.toml  Makefile
openssl/: .gitignore  Makefile  cert_bench.c
rustls/: README.md  fake_server.py  fake_server_certs.py  requirements.txt  set_delay.sh  show_results.py  (+1 more)
verdict/: Cargo.toml  README.md
verdict/.github/workflows/: build.yml
verdict/chain/: Cargo.toml
verdict/chain/src/: convert.rs  error.rs  hash.rs  issue.rs  lib.rs  validate.rs
verdict/chain/src/policy/: chrome.rs  common.rs  firefox.rs  mod.rs  openssl.rs  standard.rs
verdict/chain/src/signature/: ecdsa_aws_lc.rs  ecdsa_libcrux.rs  mod.rs  rsa_aws_lc.rs  rsa_libcrux.rs
verdict/frontend/: Cargo.toml
verdict/frontend/src/: ct_logs.rs  error.rs  main.rs  utils.rs
verdict/frontend/src/cmd/: bench_ct_logs.rs  diff_results.rs  limbo.rs  mod.rs  parse_cert.rs  parse_ct_logs.rs  validate.rs
verdict/frontend/src/harness/: armor.rs  ceres.rs  chrome.rs  common.rs  firefox.rs  hammurabi.rs  mod.rs  openssl.rs  verdict.rs
verdict/macros/src/: lib.rs
verdict/parser/: Cargo.toml
verdict/parser/src/: lib.rs
verdict/parser/src/asn1/: base128.rs  big_int.rs  bit_string.rs  boolean.rs  explicit.rs  gen_time.rs  ia5_string.rs  implicit.rs  integer.rs  len.rs  len_wrapped.rs  null.rs  octet_string.rs  oid.rs  printable_string.rs  seq_of.rs  tag.rs  utf8_string.rs  var_int.rs
verdict/parser/src/common/: base64.rs  cached.rs  clone.rs  default.rs  depend.rs  end.rs  eq.rs  mapper.rs  mod.rs  option_deep.rs  optional.rs  pair.rs  repeat.rs  unreachable.rs  vec_deep.rs  wrapped.rs
verdict/parser/src/x509/: alg_id.rs  alg_param.rs  cert.rs  display.rs  ext_value.rs  extension.rs  general_name.rs  macros.rs  mod.rs  oid.rs  pub_key_info.rs  tbs_cert.rs
verdict/polyfill/: Cargo.toml
verdict/polyfill/src/: lib.rs
verdict/rspec/: Cargo.toml
verdict/rspec/src/: lib.rs
verdict/rspec_lib/: Cargo.toml
verdict/rspec_lib/src/: lib.rs
verdict/rspec_test/: Cargo.toml
verdict/rspec_test/src/: tests.rs
verdict/tools/: activate.sh
verdict/tools/stats/: .gitignore  diff_plot.py  performance_plot.py  requirements.txt
verdict/tools/verusc/: Cargo.toml  README.md
verdict/tools/verusc/src/: main.rs
(+328 files in other folders)
