[workspace]
members = [
    "chain",
    "frontend",
    "macros",
    "parser",
    "polyfill",
    "rspec",
    "rspec_lib",
    "rspec_test",
    "deps/vest",
]

default-members = [
    "frontend",
]

exclude = [
    "tools/verusc",
    "deps/verus",
    "deps/libcrux",
]

resolver = "2"

[profile.release]
lto = "fat"
codegen-units = 1
