[package]
name = "chain"
version = "0.1.0"
edition = "2021"

[dependencies]
builtin_macros = { path = "../deps/verus/source/builtin_macros" }
builtin = { path = "../deps/verus/source/builtin" }
vstd = { path = "../deps/verus/source/vstd" }
vest = { path = "../deps/vest" }
polyfill = { path = "../polyfill" }
macros = { path = "../macros" }
parser = { path = "../parser" }
libcrux = { path = "../deps/libcrux" }
libcrux-hacl = { path = "../deps/libcrux/sys/hacl" }
chrono = "0.4.38"
aws-lc-rs = "1.10.0"
rspec = { path = "../rspec" }
rspec-lib = { path = "../rspec_lib" }

[features]
default = []
aws-lc = []

[verus]
extra_flags = "--no-lifetime"
