[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
limbo-harness-support = { git = "https://github.com/C2SP/x509-limbo", branch = "main" }
parser = { path = "../parser" }
chain = { path = "../chain" }
rspec-lib = { path = "../rspec_lib" }
clap = { version = "4.5.21", features = ["derive"] }
thiserror = "1.0.63"
csv = "1.3.0"
serde = { version = "1.0.215", features = ["derive"] }
chrono = "0.4.38"
regex = "1.11.0"
crossbeam = "0.8.4"
tempfile = "3.14.0"
serde_json = "1.0.133"
rand = "0.8.5"

[features]
default = []
aws-lc = ["chain/aws-lc"]
