[package]
name = "parser"
version = "0.1.0"
edition = "2021"

[dependencies]
builtin_macros = { path = "../deps/verus/source/builtin_macros" }
builtin = { path = "../deps/verus/source/builtin" }
vstd = { path = "../deps/verus/source/vstd" }
vest = { path = "../deps/vest" }
polyfill = { path = "../polyfill" }
der = { version = "0.7.9", features = [ "alloc", "oid" ] }
macros = { path = "../macros" }
base64 = "0.22.1"
paste = "1.0.15"
