[package]
name = "rspec-test"
version = "0.1.0"
edition = "2021"

[dependencies]
builtin_macros = { path = "../deps/verus/source/builtin_macros" }
builtin = { path = "../deps/verus/source/builtin" }
vstd = { path = "../deps/verus/source/vstd" }
rspec = { path = "../rspec" }
rspec-lib = { path = "../rspec_lib" }
